[Level 3]fix: 리팩토링
파라미터,변수,메소드명 축약형 제거하고 좀더 직관적으로 변경
나누기 분모 0 예외처리 해당 연산 람다식 내부로 옮겨서 호출시에 연산과 검증 같이 처리