@@ -3,7 +3,6 @@ package com.example.calculator2_3;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  *[ArithmeticCalculator] 계산 결과 조회/저장 클래스
@@ -13,43 +12,37 @@ import java.util.stream.Collectors;
  */
 public class ArithmeticCalculator <T extends Number> {
     //속성
-    private Number result = 0;
     private List<Number> results =  new ArrayList<>();
 
     //기본 생성자 생략
 
     //기능
     /**
-     * @param a 첫 번째 숫자 (T 타입)
-     * @param b 두 번째 숫자 (T 타입)
-     * @param op 연산자 문자 ('+', '-', '*', '/')
+     * @param firstNumber 첫 번째 숫자 (T 타입)
+     * @param secondNumber 두 번째 숫자 (T 타입)
+     * @param inputOperator 연산자 문자 ('+', '-', '*', '/')
      * @return 오류 시 true, 정상 수행 false
      */
-    public boolean calculate(T a, T b, char op) {
-        Optional<OperatorType> optionalOp = OperatorType.getOperator(op);
+    public Number calculate(T firstNumber, T secondNumber, char inputOperator) {
+        Optional<OperatorType> optionalOp = OperatorType.getOperator(inputOperator);
+        Number result = 0;
         if (optionalOp.isEmpty()) {
             System.out.println("잘못된 연산기호입니다.");
-            return true;
+            throw new IllegalArgumentException("잘못된 연산기호입니다.");
         }
         OperatorType operator = optionalOp.get();
-        double x = a.doubleValue();
-        double y = b.doubleValue();
-        if (operator == OperatorType.DIVIDE && isNotDividedByZero(y)) {
-            return true; // error
-        }
+        double firstDouble = firstNumber.doubleValue();
+        double secondDouble = secondNumber.doubleValue();
 
         // 결과값 정수 실수 판별후 해당 타입으로 저장
         try {
-            double temp = operator.applyResult(x, y);
-            result = DoubleOrInt(temp);
+            double temp = operator.applyResult(firstDouble, secondDouble);
+            result = convertToIntegerOrDouble(temp);
             setResults(result);
-            return false;
+            return result;
         } catch (ArithmeticException e) {
             System.out.println("연산 중 오류가 발생했습니다: " + e.getMessage());
-            return true;
         }
-    }
-    public Number getResult(){
         return result;
     }
     public ArrayList<Number> getResults() {
@@ -58,12 +51,12 @@ public class ArithmeticCalculator <T extends Number> {
     public void setResults(Number result) {
         Optional.ofNullable(result).ifPresent(x -> this.results.add(x));
     }
-    public void filterResults(String str) {
+    public void filterResultsGreaterThan(String str) {
         try{
             Number num = str.contains(".") ? Double.parseDouble(str) : Integer.parseInt(str);
             List<Number> numList = getResults().stream()
                     .filter(n -> n.doubleValue() > num.doubleValue())
-                    .collect(Collectors.toList());
+                    .toList();
 
             System.out.println(" 당신이 입력한 값보다 큰 결과들 입니다.: "+ numList);
         } catch(ArithmeticException e){
@@ -79,14 +72,7 @@ public class ArithmeticCalculator <T extends Number> {
         }
         return true;
     }
-    public boolean isNotDividedByZero(double n) {
-        if(n == 0) {
-            System.out.println("나눗셈에서 0으로 나눌 수 없습니다.");
-            return true;
-        }
-        return false;
-    }
-    public Number DoubleOrInt(double x) {
+    public Number convertToIntegerOrDouble(double x) {
         if(x % 1 == 0) return (int) x;
         else return x;
     }
